add header to index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-<header></header>
+<header>
+  <div class="wrap_inner">
+    <div class="logo">My blog</div>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Archive</li>
+        <li>Contact</li>
+        <li>Portfolio</li>
+      </ul>
+      <form id="searchform">
+        <input type="search" placeholder="Search">
+      </form>
+    </nav>
+  </div>
+</header>
+
 <div class="main-article"></div>
+
 <aside></aside>
+
 <footer></footer>
+
 </body>
 </html>
