main.css in css folder, add logo,nav,searchform in header index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+<div class="site-wrapper">
 <header>
   <div class="wrap_inner">
-    <div class="logo">My blog</div>
+    <div class="logo">
+      <a href="index.html">My blog</a></div>
     <nav>
       <ul>
         <li>Home</li>
@@ -17,10 +19,10 @@
         <li>Contact</li>
         <li>Portfolio</li>
       </ul>
-      <form id="searchform">
-        <input type="search" placeholder="Search">
-      </form>
     </nav>
+    <form id="searchform">
+      <input type="search" class="search" placeholder="Search">
+    </form>
   </div>
 </header>
 
@@ -29,6 +31,6 @@
 <aside></aside>
 
 <footer></footer>
-
+</div>
 </body>
 </html>
